# openapi-aggregator

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  config.example.yaml  install.sh
.github/workflows/: ci.yml  release.yml  tag-release.yml
src/: config.rs  error.rs  lib.rs  main.rs  merge.rs  source.rs
tests/: integration_test.rs
tests/fixtures/: conflict.json  petstore.yaml  users.yaml
