[package]
name = "openapi-aggregator"
version = "0.5.1"
edition = "2021"
description = "Aggregate and merge OpenAPI specifications from multiple sources"
license = "MIT"
readme = "README.md"

[[bin]]
name = "openapi-aggregator"
path = "src/main.rs"

[lib]
name = "openapi_aggregator"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
